2006-06-07  Mark D. Baushke  <mdb@gnu.org>

	* modules.c (my_module): Remove unused variable xvalue.
	[Fixes NetBSD coverity cid-705.]
	
2006-05-31  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Fix memory leak.
	[Fixes NetBSD coverity cid-3751.]
	(add_directory): Fix memory leak.
	[Fixes NetBSD coverity cid-3640.]

	* checkin.c (Checkin): Avoid possible NULL dereference.
	[Fixes NetBSD coverity cid-2425.]

	* client.c (auth_server): Fix memory leak.
	[Fixes NetBSD coverity cid-3404.]

	* commit.c (remove_file): Fix memory leak.
	[Fixes NetBSD coverity cid-3752.]

	* rcs.c (RCS_checkin): Add assert (tip).
	[Fixes NetBSD coverity cid-2424.]

2006-05-26  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs6): Wrap archive corruption in modify_repo for
	proxycheck.

2006-05-26  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Do not leak memory.
	[Fixes NetBSD coverity cid-2199.]

	* edit.c (onoff_fileproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2201.]

	* edit.c (onoff_filesdoneproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2202.]

	* lock.c (readers_exist): Add assert (lockdir).
	[Fixes NetBSD coverity cid-2411.]

	* rcs.c (RCS_findlock_or_tip): Do not leak memory.
	[Fixes NetBSD coverity cid-2198.]

	* rcs.c (RCS_getdate): Avoid possible NULL dereference.
	[Fixes NetBSD coverity cid-2412.]

	* server.c (serve_sticky): Do not leak file descriptors.
	[Fixes NetBSD coverity cid-2197.]

	* server.c (do_cvs_command): Do not leak memory.
	[Fixes NetBSD coverity cid-2204.]

	* tag.c (add_to_val_tags): Do not leak memory.
	[Fixes NetBSD coverity cid-2071.]

2006-05-25  Derek Price  <derek@ximbiot.com>

	* rsh-client.c (start_rsh_server): Remove verbose comment attempting to
	justify the pre-configure-supplied-default of `rsh'.

	* sign.c: Include <inttypes.h>.
	(sign): Avoid long long.

2006-05-25  Larry Jones  <lawrence.jones@ugs.com>

	* sanity.sh: Add -v|--verbose option to echo test names.  Clean
	up help message.